--- a/package.json
+++ b/package.json
@@ -6,33 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-   
-
- 
+    "lint": "next lint"
+  },
+  "dependencies": {
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "zod": "3.23.8",
-    "clsx": "2.1.1",
-    "@radix-ui/react-select": "2.0.0",
-    "stripe": "15.11.0",
-    "next-auth": "5.0.0-beta.20",
-    "@auth/core": "0.34.2",
-    "bcryptjs": "2.4.3",
-    : "5.18.0",
-    "posthog-js": "1.170.0",
-    "tailwind-merge": "2.5.2"
- 
-    "typescript": "5.5.4",
-    "@types/node": "20.14.10",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
+    "openai": "4.55.4",
+    "stripe": "14.25.0",
+    "classnames": "2.5.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
-    : "5.18.0",
-    "tailwindcss": "3.4.7",
-    "postcss": "8.4.39",
-    "autoprefixer": "10.4.19"
-  }
-}
+    "postcss": "8.4.47",
+    "tailwindcs
