--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "2.5.1",
     "next": "14.2.5",
+    "openai": "4.55.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "zod": "3.23.8",
-    "openai": "4.55.4",
     "stripe": "14.25.0",
-    "classnames": "2.5.1"
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "postcss": "8.4.47",
-    "tailwindcs"
+    "tailwindcss": "3.4.12",
+    "typescript": "5.6.2"
+  }
+}
