--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "2.5.1",
+    "clsx": "2.1.1",
     "next": "14.2.5",
     "openai": "4.55.4",
     "react": "18.3.1",
