--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   },
   "devDependencies": {
     "autoprefixer": "10.4.20",
+    "@types/react": "18.3.5",
+"@types/react-dom": "18.3.0",
+"@types/node": "20.14.12",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "postcss": "8.4.47",
